Fix gap between cards on home page

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -20,6 +20,7 @@
   }
 
   @media screen and (max-width: 800px) {
+    gap: 2em;
     .row {
       display: flex;
       flex-direction: column;
